<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>14</version>
    </parent>

    <groupId>org.jboss.windup</groupId>
    <artifactId>windup-parent</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Windup Parent</name>
    <description>Migration Tools</description>

    <properties>
        <version.furnace>2.5.0.Final</version.furnace>
        <version.titangraph>0.4.4</version.titangraph>
        <version.tinkerpop.blueprints>2.5.0</version.tinkerpop.blueprints>
        <version.freemarker>2.3.19</version.freemarker>

        <windup.scm.connection>scm:git:https://github.com/windup/windup.git</windup.scm.connection>
        <windup.developer.connection>scm:git:git@github.com:windup/windup.git</windup.developer.connection>
        <windup.scm.url>http://github.com/windup/windup</windup.scm.url>

        <!-- This keeps javadoc from failing on projects with no actual .java 
            source files -->
        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>

        <skipDeleteDeps>true</skipDeleteDeps> <!-- Don't delete deps from local repo by default. -->
    </properties>

    <scm>
        <tag>master</tag>
        <connection>${windup.scm.connection}</connection>
        <developerConnection>${windup.developer.connection}</developerConnection>
        <url>${windup.scm.url}</url>
    </scm>

    <modules>
        <module>graph</module>
        <module>decompiler</module> <!-- Needed by one the JavaAST... rule in config/api. -->
        <module>config</module>     <!-- TODO: Break parts of this into rules/app/... -->
        <module>tests/core</module>
        <module>utils</module>
        <module>exec</module>       <!-- TODO: Break this into ext/config-xml and rules/app/... -->
        <module>reporting</module>
        <module>ui</module>
        <module>logging</module>

        <module>rules</module>
        <module>ext/groovy</module>
    </modules>

    <build>

        <plugins>
            <!-- Local repo cleanup - project artifacts. -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>deleteLocalRepoProjectArtifacts</id>
                        <goals>
                            <goal>remove-project-artifact</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Local repo cleanup - dependencies. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>deleteLocalRepoProjectDeps</id>
                        <goals>
                            <goal>purge-local-repository</goal>
                        </goals>
                        <configuration>
                            <skip>${skipDeleteDeps}</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Forge addon creation - to be inherited & activated using 
                phase=prepare-package, resp. package. -->
            <plugin>
                <groupId>org.jboss.forge.furnace</groupId>
                <artifactId>furnace-maven-plugin</artifactId>
                <version>${version.furnace}</version>
                <executions>
                    <execution>
                        <id>generate-dot</id>
                        <phase>none</phase>
                        <goals>
                            <goal>generate-dot</goal>
                        </goals>
                        <configuration>
                            <attach>true</attach>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <id>create-forge-addon</id>
                        <phase>none</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <classifier>forge-addon</classifier>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>${testExcludeString}</exclude>
                        </excludes>
                        <argLine>
                            -Xms512m -Xmx2048m -XX:MaxPermSize=512m
                        </argLine>
                    </configuration>
            </plugin>

        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.1</version>
                    <configuration>
                        <compilerVersion>1.7</compilerVersion>
                        <source>1.7</source>
                        <target>1.7</target>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

    <profiles>
        <!-- Aggregated Javadoc -->
        <profile>
            <id>javadocDist</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>2.9.1</version>
                        <executions>
                            <execution>
                                <id>javadocs-dist</id>
                                <phase>validate</phase>
                                <goals>
                                    <goal>aggregate-jar</goal>
                                </goals>
                                <configuration>
                                    <debug>true</debug>
                                    <verbose>true</verbose>
                                    <maxmemory>2400m</maxmemory>
                                    <encoding>ISO-8859-1</encoding>
                                    <windowtitle>${javadoc.branding} API</windowtitle>
                                    <doctitle>${javadoc.branding} API</doctitle>
                                    <header>${javadoc.branding}</header>
                                    <footer>${javadoc.branding}</footer>
                                    <includeDependencySources>true</includeDependencySources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <properties>
                <javadoc.branding>Windup ${project.version}</javadoc.branding>
            </properties>
        </profile>

        <profile>
            <id>legacy</id>
            <modules combine.children="append">
                <module>legacy</module>
                <!-- Sample apps build runs Windup Maven Plugin, so legacy 
                    needs to be above. To be changed later. -->
                <module>sample-apps</module>
            </modules>
        </profile>
    </profiles>


    <dependencies>

        <!-- Commons -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.4</version>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.7</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.7</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>

    </dependencies>


    <dependencyManagement>
        <dependencies>
            
            <!-- Jess Slighter's Frames classloading patch.
                 https://github.com/jsight/frames/tree/classloaderresolver -->
            <dependency>
                <groupId>com.tinkerpop</groupId>
                <artifactId>frames</artifactId>
                <version>2.6.0-SNAPSHOT</version>
            </dependency>

            <!-- Forge and Furnace -->

            <!-- Forge BOM -->
            <dependency>
                <groupId>org.jboss.forge</groupId>
                <artifactId>forge-bom</artifactId>
                <version>${version.furnace}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Furnace CDI -->
            <dependency>
                <groupId>org.jboss.forge.furnace.container</groupId>
                <artifactId>cdi</artifactId>
                <classifier>forge-addon</classifier>
                <version>${version.furnace}</version>
                <scope>provided</scope>
                <!-- Not propagated to submodules :/ -->
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-jdk14</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!-- Furnace CDI impl -->
            <dependency>
                <groupId>org.jboss.forge.furnace.container</groupId>
                <artifactId>cdi-impl</artifactId>
                <version>${version.furnace}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-jdk14</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.jboss.forge.furnace.test</groupId>
                <artifactId>furnace-test-harness</artifactId>
                <version>${version.furnace}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.forge.furnace.test</groupId>
                <artifactId>arquillian-furnace-classpath</artifactId>
                <version>${version.furnace}</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

</project>
